--- a/FridgeIt2/app/src/main/res/layout/activity_detailed_recipe.xml
+++ b/FridgeIt2/app/src/main/res/layout/activity_detailed_recipe.xml
@@ -68,7 +68,7 @@
                 android:text="Recipe Instructions"
                 android:padding="8dp"/>
 
-            <TextView
+<!--            <TextView
                 android:id="@+id/Video"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"/>
-
+-->
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
